[package]
name = "fractal_clock_wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.23", features = [ "derive" ] }
env_logger = "0.11"
log = "0.4"
pollster = "0.4"
wgpu = "26.0.1"
winit = { version = "0.30", features = ["android-native-activity"] }
time = "0.3.44"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]
