[package]
name = "fractal_clock_wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.24", features = [ "derive" ] }
env_logger = "0.11"
log = "0.4"
pollster = "0.4"
wgpu = "27.0.1"
winit = { version = "0.30", features = ["android-native-activity"] }
time = "0.3.44"
